force-app/main/default/objects/EquipmentAsset__c/EquipmentAsset__c.object-meta.xml
<CustomObject>
    <label>보유 장비</label>
    <nameField>
        <label>Equipment Asset Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>