force-app/main/default/objects/EquipmentAsset__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Equipment Asset</relationshipLabel>
    <relationshipName>Equipment_Asset</relationshipName>
    <type>Lookup</type>
</CustomField>