force-app/main/default/objects/EquipmentAsset__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Equipment Asset</relationshipLabel>
    <relationshipName>Equipment_Asset</relationshipName>
    <type>Lookup</type>
</CustomField>