force-app/main/default/objects/EquipmentAsset__c/fields/CurrentAmount__c.field-meta.xml
<CustomField>
    <fullName>CurrentAmount__c</fullName>
    <label>Current Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>