force-app/main/default/objects/EquipmentAsset__c/fields/CurrentLifecycleEndDate__c.field-meta.xml
<CustomField>
    <fullName>CurrentLifecycleEndDate__c</fullName>
    <label>Current Lifecycle End Date</label>
    <type>DateTime</type>
</CustomField>