force-app/main/default/objects/EquipmentAsset__c/fields/CurrentMrr__c.field-meta.xml
<CustomField>
    <fullName>CurrentMrr__c</fullName>
    <label>Current Monthly Recurring Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>