force-app/main/default/objects/EquipmentAsset__c/fields/CurrentQuantity__c.field-meta.xml
<CustomField>
    <fullName>CurrentQuantity__c</fullName>
    <label>Current Quantity</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>