force-app/main/default/objects/EquipmentAsset__c/fields/EquipmentAssetLevel__c.field-meta.xml
<CustomField>
    <fullName>EquipmentAssetLevel__c</fullName>
    <label>Equipment Asset Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>