force-app/main/default/objects/EquipmentAsset__c/fields/EquipmentAssetProvidedById__c.field-meta.xml
<CustomField>
    <fullName>EquipmentAssetProvidedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment Asset Provided By ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Equipment Asset (Equipment Asset Provided By ID)</relationshipLabel>
    <relationshipName>Equipment_Asset1</relationshipName>
    <type>Lookup</type>
</CustomField>