force-app/main/default/objects/EquipmentAsset__c/fields/EquipmentAssetServicedById__c.field-meta.xml
<CustomField>
    <fullName>EquipmentAssetServicedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment Asset Serviced By ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Equipment Asset (Equipment Asset Serviced By ID)</relationshipLabel>
    <relationshipName>Equipment_Asset2</relationshipName>
    <type>Lookup</type>
</CustomField>