force-app/main/default/objects/EquipmentAsset__c/fields/HasLifecycleManagement__c.field-meta.xml
<CustomField>
    <fullName>HasLifecycleManagement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lifecycle-managed asset</label>
    <type>Checkbox</type>
</CustomField>