force-app/main/default/objects/EquipmentAsset__c/fields/IsInternal__c.field-meta.xml
<CustomField>
    <fullName>IsInternal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Asset</label>
    <type>Checkbox</type>
</CustomField>