force-app/main/default/objects/EquipmentAsset__c/fields/LifecycleEndDate__c.field-meta.xml
<CustomField>
    <fullName>LifecycleEndDate__c</fullName>
    <label>Lifecycle End Date</label>
    <type>Date</type>
</CustomField>