force-app/main/default/objects/EquipmentAsset__c/fields/LifecycleStartDate__c.field-meta.xml
<CustomField>
    <fullName>LifecycleStartDate__c</fullName>
    <label>Lifecycle Start Date</label>
    <type>Date</type>
</CustomField>