force-app/main/default/objects/EquipmentAsset__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Equipment Asset ID</label>
    <referenceTo>EquipmentAsset__c</referenceTo>
    <relationshipLabel>Equipment Asset</relationshipLabel>
    <relationshipName>Equipment_Asset</relationshipName>
    <type>Lookup</type>
</CustomField>