force-app/main/default/objects/EquipmentAsset__c/fields/RootEquipmentAssetId__c.field-meta.xml
<CustomField>
    <fullName>RootEquipmentAssetId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Root Equipment Asset ID</label>
    <referenceTo>EquipmentAsset__c</referenceTo>
    <relationshipLabel>Equipment Asset (Root Equipment Asset ID)</relationshipLabel>
    <relationshipName>Equipment_Asset1</relationshipName>
    <type>Lookup</type>
</CustomField>