force-app/main/default/objects/EquipmentAsset__c/fields/TotalLifecycleAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalLifecycleAmount__c</fullName>
    <label>Total Lifecycle Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>